Fix names from overflowing in the leaderboards

--- a/src/index.css
+++ b/src/index.css
@@ -205,4 +205,5 @@ th, td{
   font-size: 2rem;
   text-align: center;
   font-weight: bold;
+  overflow: auto;
 }
